# rustpress-plugin-rustcommerce

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
migrations/: 001_products.sql  002_orders.sql  003_shipping_tax_payments.sql
src/: hooks.rs  lib.rs  plugin.rs  settings.rs  shortcodes.rs  widgets.rs
src/admin/: analytics.rs  bookings.rs  customers.rs  dashboard.rs  inventory.rs  invoices.rs  marketing.rs  memberships.rs  mod.rs  orders.rs  products.rs  reports.rs  rewards.rs  settings.rs  subscriptions.rs  vendors.rs
src/handlers/: admin.rs  analytics.rs  auctions.rs  bookings.rs  cart.rs  checkout.rs  coupons.rs  customers.rs  inventory.rs  invoices.rs  marketing.rs  memberships.rs  mod.rs  orders.rs  products.rs  reports.rs  shipping.rs  subscriptions.rs  tax.rs  vendors.rs  webhooks.rs
src/models/: analytics.rs  auction.rs  booking.rs  bundle.rs  cart.rs  cart_recovery.rs  comparison.rs  coupon.rs  currency.rs  customer.rs  customization.rs  dynamic_pricing.rs  email_marketing.rs  email_templates.rs  inventory.rs  invoice.rs  membership.rs  mod.rs  order.rs  payment.rs  preorder.rs  product.rs  recommendations.rs  rewards.rs  search.rs  shipping.rs  subscription.rs  tax.rs  vendor.rs  waitlist.rs  wishlist.rs
src/payments/: bacs.rs  cod.rs  gateway.rs  mod.rs  paypal.rs  stripe.rs
src/services/: cart.rs  checkout.rs  coupon.rs  customer.rs  inventory.rs  mod.rs  order.rs  pricing.rs  product.rs  report.rs  shipping.rs  tax.rs
src/templates/: order_confirmation.html
