[package]
name = "rustcommerce"
version = "1.0.0"
edition = "2021"
description = "Complete e-commerce solution for RustPress"
authors = ["RustPress Team"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustpress/rustcommerce"
keywords = ["ecommerce", "shop", "store", "rustpress", "plugin"]
categories = ["web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# RustPress core
rustpress-core = { path = "../../crates/rustpress-core" }
rustpress-database = { path = "../../crates/rustpress-database" }
rustpress-auth = { path = "../../crates/rustpress-auth" }
rustpress-events = { path = "../../crates/rustpress-events" }
rustpress-jobs = { path = "../../crates/rustpress-jobs" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"

# HTTP client for payment gateways
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Templates for emails
tera = "1.19"

# URL encoding
urlencoding = "2.1"

# Hashing for secure tokens
sha2 = "0.10"
hex = "0.4"

# Random generation
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.11"

[features]
default = ["stripe", "paypal"]

# Payment gateways
stripe = []
paypal = []
square = []
braintree = []

# Feature modules (all enabled by default)
subscriptions = []
bookings = []
memberships = []
rewards = []
wishlist = []
bundles = []
auctions = []
marketplace = []
analytics = []
email_marketing = []
cart_recovery = []
recommendations = []
dynamic_pricing = []
inventory_forecast = []
multi_currency = []
customization = []
preorders = []
waitlist = []
comparisons = []
advanced_search = []
invoicing = []
email_templates = []

# Full feature set
full = [
    "subscriptions", "bookings", "memberships", "rewards", "wishlist",
    "bundles", "auctions", "marketplace", "analytics", "email_marketing",
    "cart_recovery", "recommendations", "dynamic_pricing", "inventory_forecast",
    "multi_currency", "customization", "preorders", "waitlist", "comparisons",
    "advanced_search", "invoicing", "email_templates"
]
